--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ project(firmware LANGUAGES C ASM)
 
 add_subdirectory(sdk)
 
+target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC BC_SCHEDULER_MAX_TASKS=42)
+target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC TWR_SCHEDULER_MAX_TASKS=42)
+
+
 # If you need to add some source files to the project add them to the "src" folder and update CMakeLists there
 add_subdirectory(src)
